--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react": "^0.14.8 || ^15.0.0",
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "5.2.0",
+    "react-paginate": "^2.0.1",
     "react-router": "^2.4.1",
     "webpack": "^1.12.14"
   },
