--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "loader-utils": "^0.2.13",
     "lodash": "^4.7.0",
     "react": "^0.14.8 || ^15.0.0",
+    "react-addons-create-fragment": "^15.1.0",
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "5.2.0",
     "react-paginate": "^2.0.1",
