--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,11 @@
   },
   "scripts": {
     "build:client": "NODE_ENV=production webpack --config webpack.client.rails.config.js",
+    "build:server": "webpack --config webpack.server.rails.build.config.js",
     "build:dev:client": "webpack -w --config webpack.client.rails.config.js",
+    "build:dev:server": "webpack -w --config webpack.server.rails.build.config.js",
     "build:production:client": "NODE_ENV=production webpack --config webpack.client.rails.build.config.js",
+    "build:production:server": "NODE_ENV=production webpack --config webpack.server.rails.build.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
