--- a/client/package.json
+++ b/client/package.json
@@ -40,7 +40,8 @@
     "react-on-rails": "5.2.0",
     "react-paginate": "^2.0.1",
     "react-router": "^2.4.1",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {}
 }
